# dpsa4fl-janus-tasks

./: Cargo.toml  Dockerfile  README.md  flake.nix  rustfmt.toml
src/: core.rs  fixed.rs  janus_tasks_client.rs  lib.rs  main.rs
