[package]
name = "dpsa4fl-janus-tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
janus_client = { git = "https://github.com/dpsa-project/janus.git", branch = "fixedvec" }
janus_core = { git = "https://github.com/dpsa-project/janus.git", branch = "fixedvec" }
janus_messages = { git = "https://github.com/dpsa-project/janus.git", branch = "fixedvec" }
prio = { version = "0.10.0", features = ["multithreaded"] }
url = { version = "2.3.1" }
anyhow = "1.0"
reqwest = "0.11.12"
async-std = "0.99.12"

